tests/neg-custom-args/captures/closure-result-typing.scala
def test(c: Object^): Unit =
  val x: () -> Object = () => c // error
